# flask-ecommerce

./: pyproject.toml  requirements.txt  setup.py
flaskr/: __init__.py
flaskr.egg-info/: PKG-INFO  SOURCES.txt
